--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Sample Deployment</title>
@@ -10,13 +11,13 @@
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
-    
+
     h1 {
       font-size: 500%;
       font-weight: normal;
       margin-bottom: 0;
     }
-    
+
     h2 {
       font-size: 200%;
       font-weight: normal;
@@ -24,13 +25,14 @@
     }
   </style>
 </head>
+
 <body>
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>You have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
-	to three Amazon EC2 instances using AWS CodeDeploy.</h2>
+    <h2>You have successfully created a pipeline that retrieved this source application from a GITHUB and deployed it
+      to three Amazon EC2 instances using AWS CodeDeploy.</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
   </div>
 </body>
-</html>
 
+</html>
